--- a/style.css
+++ b/style.css
@@ -104,13 +104,13 @@ h2 {
 
 /*Осн.стили для всех блоков*/
 
-body {*/
+/*body {
     font-family: 'PT Sans', sans-serif;
-}
+}*/
 
 .title {
-    padding-top: 50px;  /*отступ сверху*/
-    padding-bottom: 70px ;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .title_main {
@@ -278,20 +278,16 @@ section {
     color:#F5F5F5;
 }
 
-.form_input{
-    background: #fff;
-    font-size: 16px;
-    font-family: 'PT Sans', sans-serif; 
-    border-radius: 5px;
-    width: 70%;
-    /*padding: 15px 0;*/
-    margin-right: 21px;
-    border:0;
-    outline: none;
-}
-
 .title__text {
     text-align: center;
+}
+
+.form_input {
+    border-radius: 5px;
+    width: 80%;
+    padding: 15px 0;
+    border: 0;
+    outline: none;
 }
 
 .button {
@@ -309,6 +305,11 @@ section {
   cursor: pointer;
 }
 
+#email_button {
+    margin-top: 1%;
+    width: 80%;
+}
+
 .footer {
     background-image: url(https://proprikol.ru/wp-content/uploads/2020/06/krasivye-kartinki-zvezd-20.jpg);
      /*background: #000;*/
@@ -317,15 +318,7 @@ section {
 
 .footer_info {
     margin-top: 5%;
-    /*position: absolute;*/
-    /*left: 45%;*/
-/*  color: #fff;
-    font-size: 16px;
-    text-align: center;
-    padding: 50px 0 94px;
-    width: 184px;
-    margin: 0 auto;
-    text-align: center;*/
+    margin-bottom: 3%;
 }
 
 @media screen and (max-width: 992px) {
